[package]
name = "async_coroutine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.28"
dashmap = "5.4.0"
once_cell = "1.13.1"
libc = "0.2.153"

[dev-dependencies]
loom = { version = "0.7", features = ["futures", "checkpoint"] }
rand = "0.8.5"

[build-dependencies]
cc = "1.0.90"
bindgen = "0.69.4"
